# intelhex

./: Cargo.toml  LICENSE  README.md
src/: error.rs  intelhex.rs  lib.rs
tests/: integration_test.rs
tests/fixtures/: firmware.hex
