[package]
name = "intelhex-rs"
version = "0.1.1"
authors = ["tohrxyk"]
edition = "2021"
description = "A robust Intel HEX format parser and writer"
license = "MIT"
repository = "https://github.com/tohrxyk/intelhex-rs"
keywords = ["intel-hex", "hex", "parser", "embedded"]
categories = ["encoding", "parser-implementations"]

[lib]
name = "intelhex"

[dependencies]
